--- a/CriminalIntent/AndroidManifest.xml
+++ b/CriminalIntent/AndroidManifest.xml
@@ -7,6 +7,8 @@
     <uses-sdk
         android:minSdkVersion="8"
         android:targetSdkVersion="17" />
+    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-permission android:name="android.hardware.camera"/>
 
     <application
         android:allowBackup="true"
@@ -25,6 +27,11 @@
             android:label="@string/app_name" >
             <meta-data android:name="android.support.PARENT_ACTIVITY"
                 android:value=".CrimeListActivity" />
+        </activity>
+        <activity
+            android:name=".CrimeCameraActivity"
+            android:screenOrientation="landscape"
+            android:label="@string/app_name" >
         </activity>
     </application>
 
