--- a/CriminalIntent/AndroidManifest.xml
+++ b/CriminalIntent/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:targetSdkVersion="18" />
     <uses-permission android:name="android.permission.CAMERA" />
 	<uses-feature android:name="android.hardware.camera" />
+	<uses-permission android:name="android.permission.READ_CONTACTS"/>
 
     <application
         android:allowBackup="true"
